--- a/report/report.tex
+++ b/report/report.tex
@@ -5,6 +5,7 @@
 \usepackage{minted}
 \usepackage{enumitem}
 \usepackage[margin=1.2in]{geometry}
+\usepackage{hyperref}
 \VerbatimFootnotes
 
 \interfootnotelinepenalty=10000
@@ -529,7 +530,7 @@ fn main() {
 Differently from before, when the new worker joins the cluster, it will not receive any input until
 some reconfiguration command moves the ownership of some of the bins to it.
 
-A short demo is available at. %% TODO link demo
+A short demo is available at \url{https://www.youtube.com/watch?v=Zsf-eMvHUxU}.
 
 
 
